# frtb-sbm

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: COMM_CURVATURE.csv  COMM_DELTA.csv  COMM_VEGA.csv  CSR_NS_CURVATURE.csv  CSR_NS_DELTA.csv  CSR_NS_VEGA.csv  EQ_CURVATURE.csv  EQ_DELTA.csv  EQ_VEGA.csv  FX_CURVATURE.csv  FX_DELTA.csv  FX_VEGA.csv  GIRR_CURVATURE.csv  GIRR_DELTA.csv  GIRR_VEGA.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: 01_sbm.ipynb  approach.ipynb
src/frtb_sbm/: __init__.py  bucket_summing.py  intra_bucket_numpy.py  intra_bucket_pandas.py  utils.py
src/frtb_sbm/config/: cm_conf.py  csr_non_sec_conf.py  csr_sec_ctp_conf.py  csr_sec_nonctp_conf.py  curvature_common_conf.py  eq_conf.py  frtb_parameters.py  fx.conf  girr_config.py  vega_liquidity_horizons.py
src/frtb_sbm/sample_data/: CRIF_CM_Spec.md  CRIF_CSR_NONSEC_Spec.md  CRIF_EQ_Spec.md  CRIF_FX_Spec.md  CRIF_GIRR_Spec.md  crif_cm.py  crif_csr_nonsec.py  crif_eq.py  crif_fx.py  crif_girr.py
tests/: __init__.py  test_frtb_sbm.py
