[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frtb_sbm"
version = "0.1.0"
description = "thod for calculating capital under FRTB SA"
readme = "README.rst"
authors = [
  {name = "Thomas Haederle", email = "thomas.haederle@gmail.com"}
]
maintainers = [
  {name = "Thomas Haederle", email = "thomas.haederle@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tomanizer/frtb_sbm/issues"
changelog = "https://github.com/tomanizer/frtb_sbm/blob/master/changelog.md"
homepage = "https://github.com/tomanizer/frtb_sbm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

